--- a/Kayportfolio/style.css
+++ b/Kayportfolio/style.css
@@ -4,6 +4,10 @@
   font-family: "poppins";
   box-sizing: border-box;
 }
+.container{
+  position: relative;
+  text-align: center;
+}
 html{
   scroll-behavior: smooth;
 }
@@ -18,6 +22,11 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #262626;
 }
 nav .logo span {
   color: #ff004f;
@@ -66,7 +75,9 @@ nav ul{
 
 #header {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+  /* background: url("images/herone(1).jpg") no-repeat center center/ cover; */
+  position: relative;
 }
 
 .header-content {
@@ -90,22 +101,21 @@ nav ul{
   width: 20%;
 }
 .header-text {
-  /* margin-top: 30px;
-  font-size: 30px;
-  flex: 1;
-  padding: 0 20px; */
   flex: 1;
   padding: 20px;
+  position: absolute;
 }
 .header-text h1 {
   font-size: 60px;
   margin-top: 20px;
+  position: absolute;
 }
 .header-text h1 span {
   color: #ff004f;
 }
 .header-text p {
   font-size: 25px;
+  position: absolute;
  
 }
 .typed {
@@ -115,6 +125,7 @@ nav ul{
 
 .typed-cursor {
   font-weight: bold;
+  color:#ff004f;
 }
 
 /* about */
@@ -122,6 +133,7 @@ nav ul{
   padding: 80px 0;
   color: #ababab;
   margin-top: 0;
+  margin-top: 15%;
   margin-left: 35px;
 }
   
@@ -409,10 +421,6 @@ nav .fa-solid{
 /* @media only screen and (max-width: 600px)  */
 @media (max-width: 600px) 
 {
-   #header{
-    justify-content: center;
-    padding-right: 5px;
-  }
   .header-content img {
     width: 50%;
     order :-1; 
@@ -422,6 +430,7 @@ nav .fa-solid{
     height: auto;
     margin-top: 20px
   }
+
   .header-content {
     flex-direction: column;
     align-items: center;
@@ -430,17 +439,24 @@ nav .fa-solid{
     text-align: center;
     height: 100vh;
   } 
- .header-text {
+ /* .header-text {
      text-align: center; 
-     margin-bottom: 20px;
-  } 
+     margin-bottom: 0;
+  }  */
    .header-text h1 {
-    font-size: 30px;
-    padding-right: 45px;
+    font-size: 25px;
+    padding-right: 100px;
+    margin-top: 50px;
   }
  .header-text p {
-    padding-right: 45px;
+    /* padding-right: 45px; */
+    padding-right: 100px;
   } 
+  #nav-links li {
+   margin: 0 4px;
+    font-size: 16px;
+  
+  }
  
 
  nav ul.show{
@@ -448,17 +464,20 @@ nav .fa-solid{
   color: white;
   font-size: 2em;
 } 
+#services h1{
+  margin-right: 50px;
+  font-size: 55px;
+}
 #about{
-  padding-top:30px;
-  padding: 0 25px;
+  margin-right: 0;
+  margin-top: 0;
 }
 .about-col-1 img{
   display: none;
 }
-.about-col-2{
-  flex-basis: 100%;
-  /* padding: 10px; */
-  padding-left: 10%;
+ .about-col-2 p{
+  padding: 0;
+  font-size: 14px;
 }
 body{
   overflow-x: hidden;
@@ -486,21 +505,22 @@ body{
   .contact-left {
     margin-left: 15%;
   }
-  .copyright {
-    width: 150%;
+.contact-left h1{
+  margin-right: 0;
+    margin-left: 0;
+    text-align: left;
+    font-size: 45px; /* Optional: adjust size for small screens */
   }
   .copyright p{
-    width: 60%;
+    width: 100%;
+  }
+  .copyright{
+    width:100%;
   }
 }
 
 
-@media (max-width: 599px) {
-  .about-col-2 h1{
-    margin-top: 20px;
-  }
- 
-}
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   body {
     padding:  0 20px 0 0;
@@ -512,7 +532,7 @@ body{
     width: 90%;
     margin: 0 auto;
   }
-
+ 
   .header-content {
     display: flex;
     flex-direction: column;
@@ -520,14 +540,13 @@ body{
   }
 
   .header-content img {
-    /* width: 50%;
-    height: auto; */
     display: none;
   }
 
   .header-text {
     text-align: center;
     margin-bottom: 20px;
+    margin-right: 30%;
   }
 
   .work-list {
@@ -551,9 +570,8 @@ body{
     padding: 15px; 
   }
 
-  .contact-right {
+  .contact-right{
     flex-basis: 55%; 
-    padding: 15px; 
   }
     .sub-title {
     white-space: nowrap; 
@@ -562,10 +580,11 @@ body{
   }
   .about-col-1 img {
    margin-left:85%;
+   margin-top: 30px;
   }
   .about-col-2 {
     flex-basis: 100%;
-    padding: 10px;
+    padding: 20px;;
   }
 #services h1{ 
   margin-right: 60%; 
@@ -575,3 +594,10 @@ body{
 height: 100%;
 }
 }
+@media (max-width: 682px) {
+.header-text h1{
+ font-size: 40px;
+ margin-top: 10%; 
+}
+}
+
